add config.go file for config functions

--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-	"token": "zBX_EB6cpPgv3sJ7Fm6g",
-	"repository_name": "chatstrike/chatstrike"
+	"BearerToken": "zBX_EB6cpPgv3sJ7Fm6g",
+	"RepositoryName": "chatstrike/chatstrike"
 }
