restructure functions into approproate files; add get repository info function

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
 	"BearerToken": "zBX_EB6cpPgv3sJ7Fm6g",
 	"HostUrl": "https://gitlab.com",
-	"RepositoryName": "chatstrike/chatstrike"
+	"RepositoryNamespace": "chatstrike/chatstrike"
 }
